--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,191 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ebebeb;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+/* NavBar styles */
+header {
+  background-color: #fff;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  margin-bottom: 25px;
+}
+
+.header-container {
+  display: flex;
+  width: 80%;
+  align-items: center;
+  padding: 0 25px;
+  justify-content: space-around;
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.header-left a {
+  margin-left: 10px;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
+
+.header-left img {
+  height: 100%;
+  height: 40px;
+  cursor: pointer;
+}
+
+.header-right {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: 600;
+}
+
+.header-right a {
+  font-weight: bold;
+  margin-right: 10px;
+  color: black;
+  text-decoration: none;
+}
+
+button {
+  border-radius: 10px;
+  background-color: #205fa7;
+  font-size: 14px;
+  border: none;
+  color: white;
+  padding: 10px;
+  font-weight: 500;
+  cursor: pointer;
+  font-weight: bold;
+  width: 100%;
+}
+
+
+/* post card styles */
+.post-container {
+  background: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  padding: 25px;
+  transition: transform 0.2s ease;
+}
+
+.post-container:hover{
+  transform: scale(1.1);
+}
+
+.post-container img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.post-container h2 {
+  padding: 10px 0;
+}
+
+.post-container p {
+  color: #464646;
+}
+
+/* dash board styles */
+.dashboard-container {
+  width: 80%;
+  margin: 40px auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+}
+
+/* new post styles */
+.newpost-container {
+  width: 40%;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.newpost-container h1 {
+  text-align: center;
+}
+
+form {
+  width: 90%;
+  margin: 40px auto;
+  display: flex;
+  flex-direction: column;
+}
+
+form label {
+  color: #464646;
+  font-weight: bold;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid rgb(0, 84, 163);
+  height: 30px;
+  margin-bottom: 40px;
+  font-size: 15px;
+  background-color: #fff;
+}
+
+form input:focus,
+form textarea:focus {
+  outline: none;
+}
+
+/* Post details page styles */
+.postDetails-container {
+  width: 60%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: flex;
+  flex-direction: column;
+}
+
+.postDetails-container img {
+  margin: 20px auto;
+  width: 70%;
+  border-radius: 10px;
+}
+
+.postDetails-container h1, h4, p{
+	margin-top: 0;
+}
+
+.delete-btn{
+	background-color: rgb(175, 46, 46);
+	width: 50%;
+	margin: 10px auto;
 }
